Fix menu on small devices
Switches to a three column menu on small devices

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -55,6 +55,20 @@ nav {
   .centered {
     margin: 0 auto;
   }
+
+  li {
+    white-space: nowrap;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  ul.navbar-nav {
+      -webkit-columns: 3;
+      -moz-columns: 3;
+      columns: 3;
+      list-style-position: inside;
+      display: block;
+  }
 }
 
 .footer {
